Add SBT